plugins {
	id 'java'
	id 'application'
	id 'org.springframework.boot' version '3.4.0'
	id 'io.spring.dependency-management' version '1.1.6'
	id 'org.openjfx.javafxplugin' version '0.1.0' // 确保使用最新版本
	id "name.remal.lombok" version "2.2.13"
}

ext {
	javafxVersion = '23' // 请根据需要选择最新版本
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

javafx {
	version = "${javafxVersion}"
	modules = [ 'javafx.controls', 'javafx.fxml' ]
}
java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

sourceSets {
	main {
		resources {
			srcDirs = ['src/main/resources']
		}
	}
	test {
		resources {
			srcDirs = ['src/test/resources']
		}
	}
}


configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://maven.openjfx.io' }
}

dependencies {
	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-aop
	implementation 'org.springframework.boot:spring-boot-starter-aop:3.4.0'

	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation "org.openjfx:javafx-controls:${javafxVersion}"
	implementation "org.openjfx:javafx-fxml:${javafxVersion}"
	// https://mvnrepository.com/artifact/com.google.code.gson/gson
	implementation 'com.google.code.gson:gson:2.11.0'
// https://mvnrepository.com/artifact/commons-io/commons-io
	implementation 'commons-io:commons-io:2.18.0'
// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
	implementation 'org.apache.commons:commons-lang3:3.17.0'
// https://mvnrepository.com/artifact/commons-codec/commons-codec
	implementation 'commons-codec:commons-codec:1.17.1'

	// 如果需要其他模块，可以继续添加，例如：
	// implementation "org.openjfx:javafx-graphics:${javafxVersion}"
	// implementation "org.openjfx:javafx-media:${javafxVersion}"
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	// https://mvnrepository.com/artifact/org.knowm.xchart/xchart
	implementation 'org.knowm.xchart:xchart:3.8.8'


	// https://mvnrepository.com/artifact/ai.djl/api
	implementation 'ai.djl:api:0.31.0'
// https://mvnrepository.com/artifact/ai.djl.mxnet/mxnet-engine
	runtimeOnly 'ai.djl.mxnet:mxnet-engine:0.31.0'
// https://mvnrepository.com/artifact/ai.djl.mxnet/mxnet-native-auto
	runtimeOnly 'ai.djl.mxnet:mxnet-native-auto:1.8.0'
// https://mvnrepository.com/artifact/tech.tablesaw/tablesaw-jsplot
	implementation 'tech.tablesaw:tablesaw-jsplot:0.43.1'

}

tasks.named('test') {
	useJUnitPlatform()
}
tasks.named('run', JavaExec) {
	jvmArgs = ['--module-path', classpath.asPath, '--add-modules', 'javafx.controls,javafx.fxml']
}